FullQa New/src/FinancialForce Revenue Management/objects/StagingSummary__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmendedCostDetailCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of detail records directly under this summary that have been amended for cost.</description>
        <label>Amended Cost Detail Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmendedCostLeafCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of leaf detail records directly under this summary that have been amended for cost.</description>
        <label>Amended Cost Leaf Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmendedDetailCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of detail records directly under this summary that have been amended.</description>
        <label>Amended Detail Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmendedLeafCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of leaf detail records directly under this summary that have been amended.</description>
        <label>Amended Leaf Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailCost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sum of total cost for all detail records directly under this summary.</description>
        <label>Detail Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of detail records directly under this summary.</description>
        <label>Detail Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailErrorCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of detail records directly under this summary that have an error message.</description>
        <label>Detail Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailPreviouslyAmortized__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total previously amortized value of all detail records directly under this summary.</description>
        <label>Detail Previously Amortized</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailPreviouslyRecognized__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total previously recognized value of all detail records directly under this summary.</description>
        <label>Detail Previously Recognized</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailRevenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sum of total revenue for all detail records directly under this summary.</description>
        <label>Detail Revenue</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailToAmortizeThisPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total to amortize this period value of all detail records directly under this summary.</description>
        <label>Detail To Amortize This Period</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailToRecognizeThisPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total to recognize this period value of all detail records directly under this summary.</description>
        <label>Detail To Recognize This Period</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupingFields__c</fullName>
        <description>The fields being grouped on.</description>
        <label>Grouping Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GroupingHashedFields__c</fullName>
        <description>A concatenation of grouping field names hashed to a fixed size, to support multiple large values. Hashing allows taking values of any size and reducing them to a fixed length string.</description>
        <label>Grouping Field Hashes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupingHashedValues__c</fullName>
        <description>A concatenation of grouping field values hashed to a fixed size, to support multiple large values. Hashing allows taking values of any size and reducing them to a fixed length string.</description>
        <label>Grouping Value Hashes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupingValues__c</fullName>
        <description>The values that are being grouped on.</description>
        <label>Grouping Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeafCost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sum of total cost for all leaf records directly under this summary.</description>
        <label>Leaf Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeafCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of leaf records directly under this summary.</description>
        <label>Leaf Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeafErrorCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of leaf records directly under this summary that have an error message.</description>
        <label>Leaf Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeafPreviouslyAmortized__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total previously amortized value of all leaf records directly under this summary.</description>
        <label>Leaf Previously Amortized</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeafPreviouslyRecognized__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total previously recognized value of all leaf records directly under this summary.</description>
        <label>Leaf Previously Recognized</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeafRevenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sum of total revenue for all leaf records directly under this summary.</description>
        <label>Leaf Revenue</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeafToAmortizeThisPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total to amortize this period value of all leaf records directly under this summary.</description>
        <label>Leaf To Amortize This Period</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeafToRecognizeThisPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total to recognize this period value of all leaf records directly under this summary.</description>
        <label>Leaf To Recognize This Period</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriginalRecordId__c</fullName>
        <description>Used to store the Id of the original source record in the case that the Staging  Record has been created from a different source. On opportunity records for example the staging record is created from the opportunity product mirror. In this case the field stores the original opportunity product Id.</description>
        <label>Original Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceRecordId__c</fullName>
        <label>Source Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceRecordName__c</fullName>
        <label>SourceRecordName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StagingSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staging Summary</label>
        <referenceTo>StagingSummary__c</referenceTo>
        <relationshipLabel>Staging Summaries</relationshipLabel>
        <relationshipName>StagingSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalAmendedCostDetailCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of detail records under this summary throughout the staging tree that have been amended for cost.</description>
        <label>Total Amended Cost Detail Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAmendedCostLeafCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of leaf detail records under this summary throughout the staging tree that have been amended for cost.</description>
        <label>Total Amended Cost Leaf Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAmendedDetailCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of detail records under this summary throughout the staging tree that have been amended.</description>
        <label>Total Amended Detail Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAmendedLeafCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of leaf detail records under this summary throughout the staging tree that have been amended.</description>
        <label>Total Amended Leaf Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalDetailCost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The summed total cost of all detail records under this summary throughout the staging tree.</description>
        <label>Total Detail Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalDetailCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of detail records under this summary throughout the staging tree.</description>
        <label>Total Detail Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalDetailErrorCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of detail records with an error message that are under this summary throughout the staging tree.</description>
        <label>Total Detail Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalDetailPreviouslyAmortized__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total previously amortized value of all detail records under this summary throughout the staging tree.</description>
        <label>Total Detail Previously Amortized</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalDetailPreviouslyRecognized__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total previously recognized value of all detail records under this summary throughout the staging tree.</description>
        <label>Total Detail Previously Recognized</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalDetailRevenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The summed total revenue of all detail records under this summary throughout the staging tree.</description>
        <label>Total Detail Revenue</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalDetailToAmortizeThisPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total to amortize this period value of all detail records under this summary throughout the staging tree.</description>
        <label>Total Detail To Amortize This Period</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalDetailToRecognizeThisPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total to recognize this period value of all detail records under this summary throughout the staging tree.</description>
        <label>Total Detail To Recognize This Period</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalLeafCost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The summed total cost of all leaf records under this summary throughout the staging tree.</description>
        <label>Total Leaf Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalLeafCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of leaf records under this summary throughout the staging tree.</description>
        <label>Total Leaf Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalLeafErrorCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of leaf records with an error message that are under this summary throughout the staging tree.</description>
        <label>Total Leaf Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalLeafPreviouslyAmortized__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total previously amortized value of all leaf records under this summary throughout the staging tree.</description>
        <label>Total Leaf Previously Amortized</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalLeafPreviouslyRecognized__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total previously recognized value of all leaf records under this summary throughout the staging tree.</description>
        <label>Total Leaf Previously Recognized</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalLeafRevenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The summed total revenue of all leaf records under this summary throughout the staging tree.</description>
        <label>Total Leaf Revenue</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalLeafToAmortizeThisPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total to amortize this period value of all leaf records under this summary throughout the staging tree.</description>
        <label>Total Leaf To Amortize This Period</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalLeafToRecognizeThisPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total to recognize this period value of all leaf records under this summary throughout the staging tree.</description>
        <label>Total Leaf To Recognize This Period</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uniqueness__c</fullName>
        <label>Uniqueness</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Version</label>
        <referenceTo>StagingVersion__c</referenceTo>
        <relationshipLabel>Staging Summaries</relationshipLabel>
        <relationshipName>StagingSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Staging Summary</label>
    <nameField>
        <displayFormat>SS-{000000000}</displayFormat>
        <label>Staging Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>